--- a/zonoapp/templates/layout/sidebar.html
+++ b/zonoapp/templates/layout/sidebar.html
@@ -24,6 +24,52 @@
               <h6>Pinned</h6>
             </div>
           </li>
+
+          <li class="sidebar-main-title">
+            <div>
+              <h6 class="lan-0">Dashboard</h6>
+            </div>
+          </li>   
+
+          <li class="sidebar-main-title">
+            <div>
+              <h6 class="lan-0">Outbound</h6>
+            </div>
+          </li>   
+          <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="{% url 'create_campaign' %}">
+            <svg class="stroke-icon">
+              <use href="{% static 'assets/svg/icon-sprite.svg' %}#stroke-home"></use>
+            </svg>
+            <svg class="fill-icon">
+              <use href="{% static 'assets/svg/icon-sprite.svg' %}#fill-home"></use>
+            </svg><span class=" ">Create Campaign</span></a>
+            
+          <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
+              <svg class="stroke-icon">
+                <use href="{% static 'assets/svg/icon-sprite.svg' %}#stroke-home"></use>
+              </svg>
+              <svg class="fill-icon">
+                <use href="{% static 'assets/svg/icon-sprite.svg' %}#fill-home"></use>
+              </svg><span class=" ">Call Logs</span></a>  
+          </li>          
+          <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
+            <svg class="stroke-icon">
+              <use href="{% static 'assets/svg/icon-sprite.svg' %}#stroke-home"></use>
+            </svg>
+            <svg class="fill-icon">
+              <use href="{% static 'assets/svg/icon-sprite.svg' %}#fill-home"></use>
+            </svg><span class=" ">Contact Managent</span></a>
+            
+  
+          </li>  
+          <li class="sidebar-main-title">
+            <div>
+              <h6 class="lan-0">Agent</h6>
+            </div>
+          </li>   
+           
+
+        </li>  
           <li class="sidebar-main-title">
             <div>
               <h6 class="lan-1">General</h6>
