create campeign flow 70% create agent 60% completed

--- a/zonoapp/templates/layout/sub-header.html
+++ b/zonoapp/templates/layout/sub-header.html
@@ -3,7 +3,7 @@
 
 
 <!-- Page Sub Header Start-->
-<div class="left-header main-sub-header p-0">
+<!-- <div class="left-header main-sub-header p-0">
     <div class="left-menu-header">
       <ul class="header-left"> 
         <li class="onhover-dropdown"> <span class="f-w-700">General </span>
@@ -283,5 +283,5 @@
         </li>
       </ul>
     </div>
-</div>
+</div> -->
 <!-- Page Sub Header end -->
