--- a/zonoapp/templates/layout/sidebar.html
+++ b/zonoapp/templates/layout/sidebar.html
@@ -64,7 +64,9 @@
           </li>  
           <li class="sidebar-main-title">
             <div>
-              <h6 class="lan-0">Agent</h6>
+              <h6 class="lan-21">
+                <a href="{% url 'agent_create' %}" class="lan-21 no-color-change" style="all: inherit;cursor: pointer;">Agent</a>
+              </h6>
             </div>
           </li>   
            
