create campaign completed list campaign started

--- a/zonoapp/templates/layout/sidebar.html
+++ b/zonoapp/templates/layout/sidebar.html
@@ -52,13 +52,13 @@
                 <use href="{% static 'assets/svg/icon-sprite.svg' %}#fill-home"></use>
               </svg><span class=" ">Call Logs</span></a>  
           </li>          
-          <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
+          <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="{% url 'manage_campaign' %}">
             <svg class="stroke-icon">
               <use href="{% static 'assets/svg/icon-sprite.svg' %}#stroke-home"></use>
             </svg>
             <svg class="fill-icon">
               <use href="{% static 'assets/svg/icon-sprite.svg' %}#fill-home"></use>
-            </svg><span class=" ">Contact Managent</span></a>
+            </svg><span class=" ">Campaign Managent</span></a>
             
   
           </li>  
