--- a/zonoapp/templates/components/bonus-ui/components/sweet-alert2.html
+++ b/zonoapp/templates/components/bonus-ui/components/sweet-alert2.html
@@ -50,7 +50,7 @@
     <div class="col-xxl-3 col-lg-4 col-sm-6 col-12">
       <div class="card height-equal">
         <div class="card-header pb-0">
-          <h4>Pikachu Alert</h4>
+          <h4>Pikachu Alert</h4>su
           <p class="f-m-light mt-1">catch the pokeball.</p>
         </div>
         <div class="card-body btn-showcase">
