--- a/zonoapp/templates/pages/campaign/list_campaign.html
+++ b/zonoapp/templates/pages/campaign/list_campaign.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="container">
     <!-- Search form -->
-    <form method="GET" action="{% url 'manage_campaign' %}" style=" display: flex; flex-direction: row; justify-content: flex-end; ">
+    <form method="GET" action="{% url 'manage_campaign' %}" style="display: flex; flex-direction: row; justify-content: flex-end;">
         <div class="form-group" style="margin-right: 0.5%;">
             <input type="text" name="q" class="form-control" placeholder="Search campaigns" value="{{ search_query }}">
         </div>
@@ -26,12 +26,33 @@
                                     <span class="badge badge-primary pull-right">{{ campaign.modified_at|date:"M d, Y" }}</span>
                                 </h6>
                                 <p>{{ campaign.organisation_name }}</p>
+                                
+                                <!-- Edit and Delete Icons -->
+                                <div class="d-flex align-items-center">
+                                    
+                                    <a href="{% url 'edit_campaign' campaign.id %}" class="btn btn-link p-0" title="Edit">
+                                        <i class="fa fa-edit text-warning"></i>
+                                    </a>
+                                    <a href="{% url 'delete_campaign' campaign.id %}" class="btn btn-link p-0 ml-2" title="Delete">
+                                        <i class="fa fa-trash text-danger"></i>
+                                    </a>
+                                </div>
                             </div>
                         </div>
-                        <p><h6>Process Type: </h6>{{ campaign.process_type }}</p>
-                        <p><h6>Prompt:</h6> {{ campaign.agent.agent_prompt | truncatechars:100 }} </p>
-                        <a href="{% url 'edit_campaign' campaign.id %}" class="btn btn-sm btn-warning">Edit</a>
-                        <a href="{% url 'delete_campaign' campaign.id %}" class="btn btn-sm btn-danger">Delete</a>
+
+                        <!-- Process Type and Prompt -->
+                        <p><strong>Process Type:</strong> {{ campaign.process_type }}</p>
+                        <p><strong>Prompt:</strong> {{ campaign.agent.agent_prompt | truncatechars:100 }}</p>
+
+                        <!-- Schedule and Contact List Buttons -->
+                        <div class="d-flex justify-content-end mt-4">
+                            <a href="" class="btn btn-sm btn-info mr-2">
+                                <i class="fa fa-calendar"></i> Schedule
+                            </a>
+                            <a href="" class="btn btn-sm btn-primary">
+                                <i class="fa fa-list"></i> Contact List
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
