--- a/zonoapp/templates/pages/campaign/list_campaign.html
+++ b/zonoapp/templates/pages/campaign/list_campaign.html
@@ -49,7 +49,7 @@
                             <a href="" class="btn btn-sm btn-info mr-2">
                                 <i class="fa fa-calendar"></i> Schedule
                             </a>
-                            <a href="" class="btn btn-sm btn-primary">
+                            <a href="{% url 'contact_list' campaign.id %}" class="btn btn-sm btn-primary">
                                 <i class="fa fa-list"></i> Contact List
                             </a>
                         </div>
