Add user management

--- a/zonoapp/templates/layout/sidebar.html
+++ b/zonoapp/templates/layout/sidebar.html
@@ -124,7 +124,7 @@
           <li class="sidebar-main-title">
             <div>
                 <h6 class="lan-21">
-                    <a href="/#" class="lan-21 no-color-change" style="all: inherit;">Voice</a>
+                    <a href="{% url 'voice_view' %}" class="lan-21 no-color-change" style="all: inherit;">Voice</a>
                 </h6>
             </div>
           </li>
